docs-archive/apache-airflow-providers-smtp/2.2.1/_sources/_api/airflow/providers/smtp/hooks/smtp/index.rst.txt
airflow.providers.smtp.hooks.smtp
=================================

.. py:module:: airflow.providers.smtp.hooks.smtp

.. autoapi-nested-parse::

   Search in emails for a specific attachment and also to download it.

   It uses the smtplib library that is already integrated in python 3.



Classes
-------

.. autoapisummary::

   airflow.providers.smtp.hooks.smtp.SmtpHook


Functions
---------

.. autoapisummary::

   airflow.providers.smtp.hooks.smtp.build_xoauth2_string


Module Contents
---------------

.. py:function:: build_xoauth2_string(username, token)

   Local fallback for older Airflow cores (≤2.11).


.. py:class:: SmtpHook(smtp_conn_id = default_conn_name, auth_type = 'basic')

   Bases: :py:obj:`airflow.providers.smtp.version_compat.BaseHook`


   This hook connects to a mail server by using the smtp protocol.

   .. note:: Please call this Hook as context manager via `with`
       to automatically open and close the connection to the mail server.

   :param smtp_conn_id: The :ref:`smtp connection id <howto/connection:smtp>`
       that contains the information used to authenticate the client.


   .. py:attribute:: conn_name_attr
      :value: 'smtp_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'smtp_default'



   .. py:attribute:: conn_type
      :value: 'smtp'



   .. py:attribute:: hook_name
      :value: 'SMTP'



   .. py:attribute:: smtp_conn_id
      :value: 'smtp_default'



   .. py:attribute:: smtp_connection
      :type:  airflow.sdk.Connection | None
      :value: None



   .. py:attribute:: smtp_client
      :type:  smtplib.SMTP_SSL | smtplib.SMTP | None
      :value: None



   .. py:method:: __enter__()


   .. py:method:: __exit__(exc_type, exc_val, exc_tb)


   .. py:method:: get_conn()

      Login to the smtp server.

      .. note:: Please call this Hook as context manager via `with`
          to automatically open and close the connection to the smtp server.

      :return: an authorized SmtpHook object.



   .. py:method:: get_connection_form_widgets()
      :classmethod:


      Return connection widgets to add to connection form.



   .. py:method:: test_connection()

      Test SMTP connectivity from UI.



   .. py:method:: send_email_smtp(*, to, subject = None, html_content = None, from_email = None, files = None, dryrun = False, cc = None, bcc = None, mime_subtype = 'mixed', mime_charset = 'utf-8', custom_headers = None, **kwargs)

      Send an email with html content.

      :param to: Recipient email address or list of addresses.
      :param subject: Email subject. If it's None, the hook will check if there is a path to a subject
          file provided in the connection, and raises an exception if not.
      :param html_content: Email body in HTML format. If it's None, the hook will check if there is a path
          to a html content file provided in the connection, and raises an exception if not.
      :param from_email: Sender email address. If it's None, the hook will check if there is an email
          provided in the connection, and raises an exception if not.
      :param files: List of file paths to attach to the email.
      :param dryrun: If True, the email will not be sent, but all other actions will be performed.
      :param cc: Carbon copy recipient email address or list of addresses.
      :param bcc: Blind carbon copy recipient email address or list of addresses.
      :param mime_subtype: MIME subtype of the email.
      :param mime_charset: MIME charset of the email.
      :param custom_headers: Dictionary of custom headers to include in the email.
      :param kwargs: Additional keyword arguments.

      >>> send_email_smtp(
              'test@example.com', 'foo', '<b>Foo</b> bar', ['/dev/null'], dryrun=True
          )



   .. py:property:: conn
      :type: airflow.sdk.Connection



   .. py:property:: smtp_retry_limit
      :type: int



   .. py:property:: from_email
      :type: str | None



   .. py:property:: smtp_user
      :type: str



   .. py:property:: smtp_password
      :type: str



   .. py:property:: smtp_starttls
      :type: bool



   .. py:property:: host
      :type: str



   .. py:property:: port
      :type: int



   .. py:property:: timeout
      :type: int



   .. py:property:: use_ssl
      :type: bool



   .. py:property:: subject_template
      :type: str | None



   .. py:property:: html_content_template
      :type: str | None



   .. py:property:: ssl_context
      :type: str | None



   .. py:property:: auth_type
      :type: str



   .. py:property:: access_token
      :type: str | None



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom field behaviour.



